fixed items alignment

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,8 +14,8 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .navigation {
@@ -36,8 +36,9 @@ body {
 .article {
   background-color: map-get($map: $colors, $key: background-dark);
   margin: 2rem;
-  max-width: 80%;
+  max-width: 50rem;
   padding: 1rem;
+
 
   &__header {
     color: map-get($map: $colors, $key: font-light);
@@ -55,7 +56,7 @@ body {
   background-color: map-get($map: $colors, $key: background-dark);
   color: map-get($map: $colors, $key: font-dark);
   margin: 2rem;
-  max-width: 80%;
+  max-width: 50rem;
   padding: 1rem;
 
   &__header {
